chore: remove deprecated method Class#newInstance()