@@ -107,7 +107,7 @@ public class TypeResolutionTest1 extends AbstractTest {
         if (typeMappings.containsKey(sourceClass)) {
           requestedClass = typeMappings.get(sourceClass);
           try {
-            return requestedClass.newInstance();
+            return requestedClass.getDeclaredConstructor().newInstance();
           } catch (Exception e) {
             throw new RuntimeException(e);
           }
